# Hardware-MATLAB

./: .gitignore  .travis.yml  CMakeLists.txt  CalibrateIM483I.m  ClearCacheRPLIDAR.m  Compat_vs2017.bat  ConnectHokuyo.m  ConnectMAVLinkDevice.m  ConnectMDM.m  ConnectMT.m  ConnectMaestro.m  ConnectNMEADevice.m  ConnectP33x.m  ConnectPololu.m  ConnectRPLIDAR.m  ConnectRazorAHRS.m  ConnectSBG.m  ConnectSSC32.m  Connectublox.m  CreateHokuyo.m  CreateMAVLinkData.m  CreateMAVLinkDevice.m  CreateMDM.m  CreateMT.m  CreateMTData.m  CreateMaestro.m  CreateNMEAData.m  CreateNMEADevice.m  CreateP33x.m  CreatePololu.m  CreateRPLIDAR.m  CreateRazorAHRS.m  CreateRazorAHRSData.m  CreateSBG.m  CreateSBGData.m  CreateSSC32.m  CreateUBXData.m  Createublox.m  DestroyHokuyo.m  DestroyMAVLinkData.m  (+214 more)
.github/workflows/: github-actions.yml
3rd_support/: ReadMe.txt
Backup_vs2008/: hardwarex.sln  hardwarex.vcproj
Backup_vs2012/: hardwarex.sln  hardwarex.vcxproj  hardwarex.vcxproj.filters
Backup_vs2017/: hardwarex.vcxproj  hardwarex.vcxproj.filters
default/: hardwarex_init.m
default/x64/: hardwarex_proto.m
linux_x64/: hardwarex_proto.m
mac/: hardwarex.dylib  hardwarex_arm64.dylib  hardwarex_proto.m  hardwarex_thunk_maca64.dylib
mavlink_sbg_support/: ReadMe.txt
mavlink_support/: ReadMe.txt  hardwarex_init.m
mavlink_support/x64/: hardwarex_proto.m
mavlink_support/x86/: hardwarex_proto.m
x64/: hardwarex_proto.m
x86/: hardwarex_proto.m
